--- a/config/database.yml
+++ b/config/database.yml
@@ -10,21 +10,16 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
-  username: root
-  password:
-  host: localhost
 
 development:
-  adapter: mysql2
-  encoding: utf8
+  <<: *default
   database: LearningManagementSystem_development
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
